--- a/app/src/main/res/layout/card_order.xml
+++ b/app/src/main/res/layout/card_order.xml
@@ -7,6 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         app:cardBackgroundColor="#BA7777"
         app:contentPadding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
