--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -40,7 +40,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/transactionNote" />
 
             <TextView
-                android:id="@+id/transactionTime"
+                android:id="@+id/transactionTimestamp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -49,22 +49,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/transactionNumber" />
 
             <TextView
-                android:id="@+id/customerHint"
+                android:id="@+id/customerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="Nama Pelanggan"
-                app:layout_constraintStart_toStartOf="@+id/transactionTime"
-                app:layout_constraintTop_toBottomOf="@+id/transactionTime" />
+                app:layout_constraintStart_toStartOf="@+id/transactionTimestamp"
+                app:layout_constraintTop_toBottomOf="@+id/transactionTimestamp" />
 
             <TextView
-                android:id="@+id/customerName"
+                android:id="@+id/customerRole"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Guest"
-                app:layout_constraintStart_toStartOf="@+id/customerHint"
-                app:layout_constraintTop_toBottomOf="@+id/customerHint" />
+                app:layout_constraintStart_toStartOf="@+id/customerName"
+                app:layout_constraintTop_toBottomOf="@+id/customerName" />
 
             <TextView
                 android:id="@+id/tableHint"
@@ -73,7 +73,7 @@
                 android:layout_marginEnd="16dp"
                 android:text="Nomor Meja"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/customerHint" />
+                app:layout_constraintTop_toTopOf="@+id/customerName" />
 
             <TextView
                 android:id="@+id/tableNumber"
@@ -94,7 +94,7 @@
                 android:background="?android:attr/listDivider"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/customerName" />
+                app:layout_constraintTop_toBottomOf="@+id/customerRole" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/orderRV"
